<resources>
    <string name="app_name">Two Activities Challenge</string>
    <string name="button_add_item">Add Item</string>
    <string name="main_activity_label">Shopping List</string>
    <string name="item_selection_activity_label">Add Item</string>

    <string name="item_button_1">Cheese</string>
    <string name="item_button_2">Rice</string>
    <string name="item_button_3">Sour cream</string>
    <string name="item_button_4">Milk</string>
    <string name="item_button_5">Butter</string>
    <string name="item_button_6">Bananas</string>
    <string name="item_button_7">Apples</string>
    <string name="item_button_8">Eggs</string>
    <string name="item_button_9">Bread</string>
    <string name="item_button_10">Potatoes</string>
</resources>