<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ItemSelectionActivity">

    <Button
        android:id="@+id/item_button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:onClick="addItem1"
        android:text="@string/item_button_1" />

    <Button
        android:id="@+id/item_button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:onClick="addItem2"
        android:text="@string/item_button_2" />

    <Button
        android:id="@+id/item_button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:onClick="addItem3"
        android:text="@string/item_button_3" />

    <Button
        android:id="@+id/item_button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:onClick="addItem4"
        android:text="@string/item_button_4" />

    <Button
        android:id="@+id/item_button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:onClick="addItem5"
        android:text="@string/item_button_5" />

    <Button
        android:id="@+id/item_button6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:onClick="addItem6"
        android:text="@string/item_button_6" />

    <Button
        android:id="@+id/item_button7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:onClick="addItem7"
        android:text="@string/item_button_7" />

    <Button
        android:id="@+id/item_button8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:onClick="addItem8"
        android:text="@string/item_button_8" />

    <Button
        android:id="@+id/item_button9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:onClick="addItem9"
        android:text="@string/item_button_9" />

    <Button
        android:id="@+id/item_button10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:onClick="addItem10"
        android:text="@string/item_button_10" />

</LinearLayout>